@dhaval - added sortable/draggable and strike through on tasks

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/tasks.css">
   <!-- end CSS-->
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
@@ -44,11 +45,11 @@
       {% if url %}
          Please authorize before you can use the app: {{ url }}
       {% endif %}
-      {% for task in tasks %}
-      <ul>
-        <li> {{ task.title }} </li>
-      </ul>
+      <ul id="sortable">
+			{% for task in tasks %}
+        <li class="{{ task.status }}"> {{ task.title }} </li>
       {% endfor %}
+      </ul>
     </div>
     <footer>
 
@@ -60,6 +61,7 @@
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script src=" https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
   <script>window.jQuery || document.write('<script src="/static/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
 
