--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
 <body>
     
   <div id="container">
-    <header>
-
+    <header id="header">
+        <span id="banner-text">Google Tasks</span>
     </header>
     <div id="main" role="main">
       {% if url %}
