--- a/static/less/base.less
+++ b/static/less/base.less
@@ -34,9 +34,9 @@ audio:not([controls]) { display: none; }
 
 html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
-body { margin: 0; font-size: 13px; line-height: 1.231; }
+/*body { margin: 0; font-size: 13px; line-height: 1.231; }*/
 
-body, button, input, select, textarea { font-family: sans-serif; color: #222; }
+/*body, button, input, select, textarea { font-family: sans-serif; color: #222; }*/
 
 /* 
  * Remove text-shadow in selection highlight: h5bp.com/i
@@ -132,7 +132,7 @@ body {
    Lists
    ========================================================================== */
 
-ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
+/*ul, ol { margin: 1em 0; padding: 0 0 0 40px; }*/
 dd { margin: 0 0 0 40px; }
 nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
 
