--- a/static/css/karya.css
+++ b/static/css/karya.css
@@ -35,12 +35,15 @@ input:focus {
   box-shadow: inset 0 0px 8px #cccccc;
   border: 1px solid #ccc;
 }
+/*font-family: 'Walter Turncoat', cursive;*/
+/*font-family: 'Schoolbell', cursive;*/
 .taskList #tasks-form {
   width: 50%;
   margin: 0 auto;
   padding: 10px;
 }
 .taskList #tasks-form input {
+  font-family: 'Walter Turncoat', cursive;
   font-size: 21px;
   line-height: 23px;
   width: 85%;
@@ -54,6 +57,7 @@ input:focus {
   margin: 5px 0;
 }
 .taskList .tasks input.taskText {
+  font-family: 'Schoolbell', cursive;
   width: 90%;
   padding-right: 40px;
   padding-left: 30px;
