--- a/static/less/karya.less
+++ b/static/less/karya.less
@@ -23,6 +23,8 @@ input{
   }
 }
 
+/*font-family: 'Walter Turncoat', cursive;*/
+/*font-family: 'Schoolbell', cursive;*/
 
 .taskList{
   #tasks-form{
@@ -30,6 +32,7 @@ input{
     margin:0 auto;
     padding:10px;
     input{
+      font-family: 'Walter Turncoat', cursive;
       .sizeH2();
       width:85%;
     }
@@ -42,6 +45,7 @@ input{
       margin:5px 0; 
     }
     input.taskText{
+      font-family: 'Schoolbell', cursive;
       width:90%;
       padding-right:40px;
       padding-left:30px;
