--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
   <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="/static/css/reset.css">
 	<link rel="stylesheet" href="/static/css/base.css">
+  <!-- importing google web fonts-->
+  <link href='http://fonts.googleapis.com/css?family=Walter+Turncoat|Schoolbell' rel='stylesheet' type='text/css'>
+  <!-- end of web fonts-->
   <link rel="stylesheet" href="/static/css/karya.css">
   <!-- end CSS-->
 
