--- a/static/less/karya.less
+++ b/static/less/karya.less
@@ -23,9 +23,6 @@ input{
   }
 }
 
-/*font-family: 'Walter Turncoat', cursive;*/
-/*font-family: 'Schoolbell', cursive;*/
-
 .taskList{
   #tasks-form{
     width:50%;
@@ -54,10 +51,10 @@ input{
         color:#777;
       }
     }
-    input.done,a.removeTask{
+    input.check,a.removeTask{
       position:absolute;
     }
-    input.done{
+    input.check{
       top:8px;
       left:8px;
     }
@@ -72,4 +69,8 @@ input{
       }
     }
   }
+}
+
+footer{
+  text-align:center;
 }
