div - layout for task lists

--- a/static/less/karya.less
+++ b/static/less/karya.less
@@ -23,7 +23,18 @@ input{
   }
 }
 
+.taskLists{
+	overflow:hidden;
+	.taskListTitle{
+		overflow:hidden;
+		
+	}
+}
+
 .taskList{
+	float:left;
+	width:33%;
+	margin:10px;
   #tasks-form{
     width:50%;
     margin:0 auto;
