--- a/static/css/karya.css
+++ b/static/css/karya.css
@@ -35,20 +35,22 @@ input:focus {
   box-shadow: inset 0 0px 8px #cccccc;
   border: 1px solid #ccc;
 }
+.taskLists {
+  overflow: hidden;
+}
+.taskLists .taskListTitle {
+  overflow: hidden;
+}
+.taskList {
+  float: left;
+  width: 33%;
+  margin: 10px;
+}
 .taskList #tasks-form {
   width: 50%;
   margin: 0 auto;
   padding: 10px;
-
 }
-
-h2.taskListTitle{
-  font-family: 'Walter Turncoat', cursive;
-  font-size: 25px;
-  line-height: 27px;
-  text-align: center;
-}
-
 .taskList #tasks-form input {
   font-family: 'Walter Turncoat', cursive;
   font-size: 21px;
