--- a/templates/index.html
+++ b/templates/index.html
@@ -25,9 +25,11 @@
   <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="/static/css/reset.css">
 	<link rel="stylesheet" href="/static/css/base.css">
+	
   <!-- importing google web fonts-->
   <link href='http://fonts.googleapis.com/css?family=Walter+Turncoat|Schoolbell' rel='stylesheet' type='text/css'>
   <!-- end of web fonts-->
+
   <link rel="stylesheet" href="/static/css/karya.css">
   <!-- end CSS-->
 
@@ -70,8 +72,10 @@
       </div>
     </div>
     <footer>
-      <h2 class="karyaLogo">karya</h2>
-      <span id="googleCredit">powered by Google Tasks</span>
+      <div class="main">
+      	<h2 class="karyaLogo">karya</h2>
+	      <span id="googleCredit">powered by Google Tasks</span>
+      </div>
     </footer>
   </div> <!--! end of #container -->
 
