--- a/static/less/karya.less
+++ b/static/less/karya.less
@@ -1,5 +1,10 @@
 @import "util.less";
 
+@font-face{
+	font-family:'Prakrta';
+	src:"fonts/prakrta/prakrta_.ttf";
+}
+
 .removeLink(){
 	position:relative;
 	font-size:1.1em;
@@ -14,24 +19,29 @@
 
 html{
   background:#fff;
-}
+} 
 
 input{
   .round-corner(3px);
   .transition(all,200ms,ease);
-  border:1px solid transparent;
+	border:none;
+  border-bottom:2px solid transparent;
   padding:5px 10px;
   background:transparent;
   &:hover,&:focus{
     .transition(all,100ms,ease);
-    .inset-shadow(inset,0,0px,8px,#ddd);
+/*    .inset-shadow(inset,0,0px,8px,#ddd);*/
+		border:none;
+		border-bottom:2px dashed #ddd;
     background:#fff;
-    border:1px solid #eee;
+/*    border:1px solid #eee;*/
     outline:none;
   }
   &:focus{
-    .inset-shadow(inset,0,0px,8px,#ccc);
-    border:1px solid #ccc;
+/*    .inset-shadow(inset,0,0px,8px,#ccc);*/
+		border:none;
+		border-bottom:2px dashed #ccc;
+/*    border:1px solid #ccc;*/
   }
 }
 
@@ -124,4 +134,25 @@ input{
 
 footer{
   text-align:center;
+	.main{
+		width:250px;
+		margin:0 auto;
+		padding:0 0 20px 0;
+		overflow:hidden;
+		.karyaLogo,#googleCredit{
+			display:block;
+			float:left;
+		}
+		#googleCredit{
+			width: 100px;
+			font-size: 0.6em;
+			text-transform: uppercase;
+			line-height: 1em;
+			margin: 5px 0;
+		}
+		.karyaLogo{
+			font-family:Prakrta,sans-serif;
+			-webkit-box-reflect:below 1px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.5, transparent), to(white));
+		}
+	}
 }
